-
Bug
-
Resolution: Fixed
-
Trivial
-
Lustre 2.16.0
-
None
-
3
-
9223372036854775807
replay-single/65a can fail on a local setup: with @@@@@@ FAIL: No early reply
this happens because OBD_FAIL_PTLRPC_PAUSE_REQ pauses any RPC except OBD_PING, but if MDS share the node with OST, then another RPC like OST_PRECREATE can hit the pause (which is supposed to happen just once).
- mentioned in
-
Page Loading...